# sec_html_parser

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: README.md  aapl_10k.html  aapl_10k.json  aapl_10k_parsed.html  goog_10k.html  goog_10k.json  goog_10k_parsed.html
sec_html_parser/: __main__.py  div_style.py  font_style.py  parser.py  span_style.py
tests/: test_div_style.py  test_font_style.py  test_parser.py  test_sec_html_parser.py  test_span_style.py
