[tool.poetry]
name = "sec_html_parser"
version = "0.1.0"
description = ""
authors = ["Tom Selfin <selfint@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
rope = "^0.19.0"
black = "^21.6b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
